DevOps/CI/manifest-main/grafana/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: kube-mon
  annotations:
    prometheus.io/scheme: "true" 
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.itsky.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
